syntax = "proto3";
package proto;
option go_package = "https://github.com/Miniim98/MandatoryExercise2/proto";

service DME{
    rpc requestAccess(AccesRequest) returns (AccesRequest){}
}

message AccesRequest{
    Timestamp timestamp = 1;
    int32 RequestingId = 2;
}

message Timestamp {
    int32 events = 1;
}